<resources>
    <string name="landing_title">¡Traduce, juega y aprende! </string>
    <string name="rules_password">Tu contraseña debe incluir al menos un número, un carácter especial y una letra mayúscula.</string>
    <string name="email_label">Correo</string>
    <string name="password_label">Contraseña</string>
    <string name="email_hint">Ingresa tu correo</string>
    <string name="password_hint">Ingresa tu contraseña</string>
    <string name="permissions_alert">Para que “Señas Chapinas” funcione, necesitamos acceso a tu cámara. ¡Actívalo y empecemos!</string>
    <string name="camera_alert">Para que “¡Presiona el botón para empezar a grabar!</string>
    <string name="button_give_permissions">Dar Permisos</string>
    <string name="button_activate_camera">Activar Cámara</string>
    <string name="bottomsheet_title">Generar Reporte</string>
    <string name="bottomsheet_content">El video será enviado para evaluación. ¿Estás de acuerdo?</string>
    <string name="bottomsheet_button1">Regresar</string>
    <string name="bottomsheet_button2">Reportar</string>
    <string name="search">Buscar palabra</string>
    <string name="empty_search">Palabra no disponible \n ¡Seguimos creciendo!</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="cuenta">Cuenta</string>
    <string name="aplicacion">Aplicación</string>
    <string name="sobre_app">Sobre la app</string>
    <string name="reto">Reto diario</string>
    <string name="activar_cam">Activar cámara al iniciar</string>
    <string name="about_title">Acerca de Señas Chapinas</string>
    <string name="about_content">Señas Chapinas facilita la comunicación en LENSEGUA al convertir lengua de señas a texto mediante tecnologías de visión por computadora y aprendizaje profundo. Esta herramienta está diseñada para mejorar las interacciones cotidianas y la calidad de vida de la comunidad sorda, enfocándose en vocabulario esencial y situaciones de emergencia.</string>
    <string name="about_content2">Extendemos nuestro más sincero agradecimiento a las siguientes asociaciones y personas por su invaluable colaboración:</string>
    <string name="about_content3"> Alumnas practicantes de ASEDES:\nEvelyn Cacao\nAny Max\nRuth Amézquita</string>
    <string name="challenge_title">¡Completa tu Reto Diario!</string>
    <string name="challenge_subtitle">¿Cuál es la seña correcta?</string>
    <string name="challenge_omitir"><u>Omitir</u></string>
    <string name="challenge_close">Cerrar</string>
    <string name="empty_video">¡Aquí aparecerán\ntus videos favoritos!</string>
    <string name="empty_trad">¡Aquí aparecerán\ntus traducciones favoritas!</string>


</resources>