<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.screens.flows.settings.ui.SettingsFragment">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/cuenta"
        android:textColor="@color/base_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_grey_square_settings"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/llcontra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgEdit"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:src="@drawable/edit_s" />

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:gravity="left"
                android:text="@string/cambiar_contra"
                android:textColor="@color/base_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:src="@drawable/grey_line" />

        <LinearLayout
            android:id="@+id/llcerrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:src="@drawable/close_s" />

            <TextView
                android:id="@+id/tvClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:gravity="left"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/base_blue"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:src="@drawable/grey_line" />

        <LinearLayout
            android:id="@+id/lleliminar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTrasg"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:src="@drawable/trash_s" />

            <TextView
                android:id="@+id/tvTrash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:gravity="left"
                android:text="@string/eliminar_cuenta"
                android:textColor="@color/base_red"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/aplicacion"
        android:textColor="@color/base_green"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_grey_square_settings"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:id="@+id/llsobre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgQuestion"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:src="@drawable/question_s" />

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_medium"
                android:gravity="left"
                android:text="@string/sobre_app"
                android:textColor="@color/base_blue"
                android:textSize="16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:src="@drawable/grey_line" />

        <LinearLayout
            android:id="@+id/llreto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgFire"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:src="@drawable/fire" />

            <TextView
                android:id="@+id/tvFire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:gravity="center_vertical"
                android:text="@string/reto"
                android:textColor="@color/base_blue"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <Switch
                android:id="@+id/switchReto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:clickable="false"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:src="@drawable/grey_line" />

        <LinearLayout
            android:id="@+id/llcamara"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginEnd="10dp"

                android:src="@drawable/camera_s" />

            <TextView
                android:id="@+id/tvCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_medium"
                android:gravity="left"
                android:text="@string/activar_cam"
                android:textColor="@color/base_blue"
                android:textSize="16sp"
                android:layout_weight="1"/>


            <Switch
                android:id="@+id/switchCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:clickable="false"
            />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>